--- a/public/css/style.css
+++ b/public/css/style.css
@@ -244,7 +244,7 @@ main {
     font-size: 3rem;
     color: #2196f3; }
   #app .card-preview {
-    display: inline-block;
+    display: none;
     box-sizing: border-box;
     margin-right: 10%;
     border: 1px solid black;
@@ -263,7 +263,42 @@ main {
       #app .card-preview input:hover {
         background-color: #2196f3;
         color: white; }
-    #app .card-preview .new-card-info {
+    #app .card-preview a {
+      text-decoration: overline;
+      display: block;
+      background-color: white;
+      box-shadow: none;
+      border: 1px solid black;
+      padding: 10px 20px;
+      margin-bottom: 20px; }
+      #app .card-preview a:hover {
+        background-color: #2196f3;
+        color: white; }
+    #app .card-preview .new-card-info, #app .card-preview .moreInfos {
       display: none; }
+
+.double-bounce {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin: 40px auto; }
+  .double-bounce .child {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #5f5e60;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: doubleBounce 2.0s infinite ease-in-out; }
+  .double-bounce .double-bounce2 {
+    animation-delay: -1.0s; }
+
+@keyframes doubleBounce {
+  0%, 100% {
+    transform: scale(0); }
+  50% {
+    transform: scale(1); } }
 
 /*# sourceMappingURL=style.css.map */
