--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,7 +11,7 @@
     <body>
         <header>
             <div class="container">
-                <h1><a href="#"><img src="img/logo_boosterad.svg" alt="Logo" /></a></h1>
+                <h1><a href="#"><img src="{% static 'offers/img/logo_boosterad.svg' %}" alt="Logo" /></a></h1>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Profil</a></li>
@@ -20,7 +21,7 @@
         <main>
             <section id="about">
                 <div class="spin">
-                    <img class="icon" src="img/logo_boosterad.svg" alt="" />
+                    <img class="icon" src="{% static 'offers/img/logo_boosterad.svg"' %} alt="" />
                 </div>
                 <ul id="slideAnimation">
                     <li class="active">
@@ -71,8 +72,8 @@
                             </div>
                             <!-- mehr information oder in der schleife eine neue karten -->
                             <div class="moreInfos">
-                                <a href="coinShop.html">Coinshop</a>
-                                <a href="rabattseite.html">Your Discounts</a>
+                                <a href="{% static 'offers/coinShop.html' %}">Coinshop</a>
+                                <a href="{% static 'offers/rabattseite.html' %}">Your Discounts</a>
                                 <input id="return" type="button" name="returntoside" value="Return to page">
                             </div>
 
@@ -96,7 +97,7 @@
         <footer>
             FutureatAdHackathon
         </footer>
-        <script type="text/javascript" src="js/jquery-3.0.0.js"></script>
-        <script type="text/javascript" src="js/headerSlide.js"></script>
+        <script type="text/javascript" src="{% static 'offers/js/jquery-3.0.0.js"' %}></script>
+        <script type="text/javascript" src="{% static 'offers/js/headerSlide.js' %}"></script>
     </body>
 </html>
