--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -6,7 +6,7 @@
         <title>BoostAd</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="{% static 'offers/css/style.css' %}">
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
         <main>
             <section id="about">
                 <div class="spin">
-                    <img class="icon" src="{% static 'offers/img/logo_boosterad.svg"' %} alt="" />
+                    <img class="icon" src="{% static 'offers/img/logo_boosterad.svg' %}" alt="" />
                 </div>
                 <ul id="slideAnimation">
                     <li class="active">
@@ -97,7 +97,7 @@
         <footer>
             FutureatAdHackathon
         </footer>
-        <script type="text/javascript" src="{% static 'offers/js/jquery-3.0.0.js"' %}></script>
+        <script type="text/javascript" src="{% static 'offers/js/jquery-3.0.0.js' %}"></script>
         <script type="text/javascript" src="{% static 'offers/js/headerSlide.js' %}"></script>
     </body>
 </html>
