--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,14 +246,15 @@ main {
   #app .card-preview {
     display: none;
     box-sizing: border-box;
-    margin-right: 10%;
-    border: 1px solid black;
     padding: 20px; }
-    #app .card-preview:last-child {
-      margin-right: 0; }
+    #app .card-preview .container {
+      padding: 20px;
+      border: 1px solid black; }
     #app .card-preview form {
       overflow: hidden; }
     #app .card-preview input {
+      margin: 0 auto;
+      width: 120px;
       display: block;
       background-color: white;
       box-shadow: none;
@@ -282,6 +283,15 @@ main {
   height: 40px;
   position: relative;
   margin: 40px auto; }
+  .double-bounce #eventTicker {
+    z-index: 9999;
+    text-indent: -9999px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    cursor: pointer; }
   .double-bounce .child {
     width: 100%;
     height: 100%;
