--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -55,17 +55,21 @@
             </section>
             <section id="app">
                 <h2>Prototype</h2>
-                <div  class="double-bounce">
-                    <div class="child double-bounce1"></div>
-                    <div id="eventTicker">eventticker</div>
-                    <div class="child double-bounce2"></div>
-                </div>
+                <form class="" action="index.html" method="get">
+                    <div  class="double-bounce">
+                        <div class="child double-bounce1"></div>
+                        <div id="eventTicker">eventticker</div>
+                        <div class="child double-bounce2"></div>
+                    </div>
+                </form>
+
                 <div class="card-preview">
-<<<<<<< HEAD:public/index.html
+<!--<<<<<<< HEAD:public/index.html -->
                     <div class="container">
                         <div class="card-header">
                             <form class="choose-profit" action="index.html" method="post">
                                 <!-- Erste Auswahl -->
+                                <!-- input -> value = Werte aus der Datenbank-->
                                 <input id="percent" type="button" name="percent" value="15%">
                                 <input id="discount" type="button" name="discount" value="345 Coins">
                                 <!-- neue Karte oder weitere Infos -->
@@ -75,36 +79,17 @@
                                 </div>
                                 <!-- mehr information oder in der schleife eine neue karten -->
                                 <div class="moreInfos">
-                                    <a href="coinShop.html">Coinshop</a>
-                                    <a href="rabattseite.html">Your Discounts</a>
+                                    <a href="{% static 'offers/coinShop.html' %}">Coinshop</a>
+                                    <a href="{% static 'offers/rabattseite.html' %}">Your Discounts</a>
                                     <input id="return" type="button" name="returntoside" value="Return to page">
                                 </div>
-=======
-                    <div class="card-header">
-                        <form class="choose-profit" action="index.html" method="post">
-                            <!-- Erste Auswahl -->
-                            <input id="percent" type="button" name="percent" value="15%">
-                            <input id="discount" type="button" name="discount" value="345 Coins">
-                            <!-- neue Karte oder weitere Infos -->
-                            <div class="new-card-info">
-                                <input id="new-card" type="button" name="newCard" value="New Card">
-                                <input id="more-infos" type="button" name="moreInfos" value="More Information">
-                            </div>
-                            <!-- mehr information oder in der schleife eine neue karten -->
-                            <div class="moreInfos">
-                                <a href="{% static 'offers/coinShop.html' %}">Coinshop</a>
-                                <a href="{% static 'offers/rabattseite.html' %}">Your Discounts</a>
-                                <input id="return" type="button" name="returntoside" value="Return to page">
-                            </div>
->>>>>>> master:booster_ad/offers/templates/offers/index.html
-
-
                             </form>
                         </div>
                         <div class="card-main">
                             <p>
                                 Mode
                             </p>
+                            <!-- Das Logo von der Brand-->
                             <img src="" alt="Logo" />
                         </div>
 
