--- a/booster_ad/offers/templates/offers/profile.html
+++ b/booster_ad/offers/templates/offers/profile.html
@@ -1,10 +1,11 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>Profilseite des Nutzers</title>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
-                <link rel="stylesheet" href="css/style.css">
+                <link rel="stylesheet" href="{% static 'offers/css/style.css' %}">
     </head>
     <body>
         <header>
@@ -20,7 +21,7 @@
             <div class="sale-container">
                 <img src="" alt="Bild" />
                 <p>
-                    Name
+                    {{ user.fullName }}
                 </p>
                 <p id="sale">
                     Rabatt <span>%</span>
