Templates: Profil und Index verlinkt

--- a/booster_ad/offers/templates/offers/profile.html
+++ b/booster_ad/offers/templates/offers/profile.html
@@ -12,7 +12,7 @@
             <h1>Logo</h1>
             <ul>
                 <ul>
-                    <li>Home</li>
+                    <li><a href="{% url 'offers:index' %}"> Home </a></li>
                     <li>Settings</li>
                 </ul>
             </ul>
