--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -14,7 +14,7 @@
                 <h1><a href="#"><img src="{% static 'offers/img/logo_boosterad.svg' %}" alt="Logo" /></a></h1>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Profil</a></li>
+                    <li><a href="{% url 'offers:profile' 1 %}">Profil</a></li>
                 </ul>
             </div>
         </header>
