style: imporved prototype, script: edit cards

--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -61,9 +61,15 @@
                         <div id="eventTicker">eventticker</div>
                         <div class="child double-bounce2"></div>
                     </div>
+                    <div class="black-cards">
+                        <h3>Choose One!</h3>
+                        <div class="card"><span>#1</span></div>
+                        <div class="card"><span>#2</span></div>
+                    </div>
                 </form>
 
                 <div class="card-preview">
+                    <h3>Decide between Discount or Fancy Coins!</h3>
 <!--<<<<<<< HEAD:public/index.html -->
                     <div class="container">
                         <div class="card-header">
@@ -86,9 +92,10 @@
                             </form>
                         </div>
                         <div class="card-main">
-                            <p>
+                            <!--Category-->
+                            <!-- <p>
                                 Mode
-                            </p>
+                            </p> -->
                             <!-- Das Logo von der Brand-->
                             <img src="" alt="Logo" />
                         </div>
