--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -105,11 +105,30 @@
                 </div>
             </section>
             <section id="powered">
-                wir halt
+                <h2>Awesome work done by #<span>tOxicwOlvez</span></h2>
+                <hr>
+                <ul>
+                    <li>
+                        <h4>Vincent Dahmen</h4>
+                        <small>Developer</small>
+                    </li>
+                    <li>
+                        <h4>Rafael Heid</h4>
+                        <small>Developer</small>
+                    </li>
+                    <li>
+                        <h4>Philipp Klemmer</h4>
+                        <small>Webdeveloper</small>
+                    </li>
+                </ul>
             </section>
         </main>
+        <div class="goodbye">
+            <h4>Thank you for the great weekend!</h4>
+            <small>#<span>FutureatAdHackathon</span></small>
+        </div>
         <footer>
-            FutureatAdHackathon
+            <input type="button" name="name" value="Time to say goodbye">
         </footer>
         <script type="text/javascript" src="{% static 'offers/js/jquery-3.0.0.js' %}"></script>
         <script type="text/javascript" src="{% static 'offers/js/headerSlide.js' %}"></script>
