--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -20,9 +20,6 @@
         </header>
         <main>
             <section id="about">
-                <div class="spin">
-                    <img class="icon" src="{% static 'offers/img/logo_boosterad.svg' %}" alt="" />
-                </div>
                 <ul id="slideAnimation">
                     <li class="active">
                         <h2>Booster Ad</h2>
@@ -34,6 +31,9 @@
                         <h2>Even if you don't like them</h2>
                     </li>
                 </ul>
+                <div class="spin">
+                    <img class="icon" src="{% static 'offers/img/logo_boosterad.svg' %}" alt="" />
+                </div>
             </section>
             <section id="about-visual">
                 <h2>Visual Explanation</h2>
@@ -42,7 +42,7 @@
                 <div>da</div>
             </section>
             <section id="customers">
-                <h2>Welche Kunden unterstützen uns schon :P</h2>
+                <h2>Our Customers</h2>
                 <div class="card-container">
                     <ul>
                         <li>Amazon</li>
@@ -125,7 +125,8 @@
         </main>
         <div class="goodbye">
             <h4>Thank you for the great weekend!</h4>
-            <small>#<span>FutureatAdHackathon</span></small>
+            <p>Make Ads great again!</p>
+            <small>#<span>FutureAdHackathon</span></small>
         </div>
         <footer>
             <input type="button" name="name" value="Time to say goodbye">
