--- a/booster_ad/offers/static/offers/scss/style.scss
+++ b/booster_ad/offers/static/offers/scss/style.scss
@@ -85,6 +85,7 @@ main{
             li{
                 display: none;
                 h2{
+                    margin-bottom: 50px;
                     font-size: 3rem;
                     color: #2196f3;
                 }
@@ -157,7 +158,7 @@ main{
                 @extend .flexboxContainer;
                 margin-left: 2%;
                 margin-bottom: 2%;
-                color: white;
+                color: black;
                 width: 30%;
                 height: 200px;
                 float: left;
@@ -167,6 +168,7 @@ main{
                 &:hover{
                     background-color: rgba(0,0,0,1);
                     font-size: 3rem;
+                    color: white;
                 }
             }
         }
@@ -306,7 +308,7 @@ $spinkit-spinner-color: #5f5e60 !default;
         width: 150px;
         height: 200px;
         margin-right: 10%;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0,0,0,0.2);
         color: white;
         box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
         cursor: pointer;
