--- a/booster_ad/offers/static/offers/css/style.css
+++ b/booster_ad/offers/static/offers/css/style.css
@@ -263,6 +263,10 @@ main {
           background-color: black;
           font-size: 3rem;
           color: white; }
+        #customers .card-container ul li small {
+          display: none;
+          font-size: 1rem;
+          font-weight: 100; }
 
 #app {
   text-align: center;
