--- a/booster_ad/offers/static/offers/scss/style.scss
+++ b/booster_ad/offers/static/offers/scss/style.scss
@@ -170,6 +170,11 @@ main{
                     font-size: 3rem;
                     color: white;
                 }
+                small{
+                    display: none;
+                    font-size: 1rem;
+                    font-weight: 100;
+                }
             }
         }
 
