fix: changed settings button to link, for designfix

--- a/booster_ad/offers/templates/offers/profile.html
+++ b/booster_ad/offers/templates/offers/profile.html
@@ -13,7 +13,7 @@
             <ul>
                 <ul>
                     <li><a href="{% url 'offers:index' %}"> Home </a></li>
-                    <li>Settings</li>
+                    <li><a href="">Settings</a></li>
                 </ul>
             </ul>
         </header>
