template: brands will now display in index.html

--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -46,7 +46,7 @@
                 <div class="card-container">
                     <ul>
                         {% for brand in brands%}
-                        <li> brand.name </li>
+                        <li> {{brand.name}} </li>
                         {% endfor %}
                     </ul>
                 </div>
