--- a/booster_ad/offers/static/offers/css/style.css
+++ b/booster_ad/offers/static/offers/css/style.css
@@ -186,7 +186,8 @@ main {
         display: none; }
         main #about ul li h2 {
           margin-bottom: 50px;
-          font-size: 3rem;
+          font-size: 10rem;
+          font-weight: 100;
           color: #2196f3; }
 
 @keyframes spin {
@@ -282,7 +283,7 @@ main {
     #app .card-preview .card-main img {
       width: 100px; }
     #app .card-preview .card-header {
-      background-color: #bdc3c7; }
+      background-color: rgba(0, 0, 0, 0.1); }
     #app .card-preview h3 {
       font-size: 1.5rem;
       margin-bottom: 50px; }
@@ -302,7 +303,7 @@ main {
       border: 0;
       box-shadow: -1px 1px 5px 0px rgba(0, 0, 0, 0.75); }
       #app .card-preview input:hover {
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: black;
         color: white; }
     #app .card-preview input:last-child {
       margin-bottom: 0; }
@@ -316,7 +317,7 @@ main {
       padding: 10px 20px;
       margin-bottom: 20px; }
       #app .card-preview a:hover {
-        background-color: #2196f3;
+        background-color: black;
         color: white; }
     #app .card-preview .new-card-info, #app .card-preview .moreInfos {
       display: none; }
@@ -397,7 +398,8 @@ main {
     font-size: 2.5rem;
     padding: 20px; }
     #powered h2 span {
-      font-weight: 500; }
+      font-weight: 700;
+      color: #2196f3; }
   #powered hr {
     width: 60%;
     margin: 0 auto;
@@ -450,7 +452,10 @@ footer {
     margin: 0 0 50px 0;
     padding: 20px 50px;
     font-size: 2rem;
-    background-color: #2196f3;
-    border: none; }
+    background-color: black;
+    border: none;
+    box-shadow: -2px 2px 5px 0px rgba(0, 0, 0, 0.75); }
+    footer input:hover {
+      background-color: #2196f3; }
 
 /*# sourceMappingURL=style.css.map */
