--- a/booster_ad/offers/static/offers/scss/style.scss
+++ b/booster_ad/offers/static/offers/scss/style.scss
@@ -86,7 +86,8 @@ main{
                 display: none;
                 h2{
                     margin-bottom: 50px;
-                    font-size: 3rem;
+                    font-size: 10rem;
+                    font-weight: 100;
                     color: #2196f3;
                 }
             }
@@ -201,7 +202,7 @@ main{
             width: 100px;
         }
         .card-header{
-            background-color: #bdc3c7;
+            background-color: rgba(0,0,0,0.1);
         }
         h3{
             font-size: 1.5rem;
@@ -226,7 +227,7 @@ main{
             border: 0;
             box-shadow: -1px 1px 5px 0px rgba(0, 0, 0, 0.75);
             &:hover{
-                background-color: rgba(0,0,0,0.5);
+                background-color: black;
                 color: white;
             }
         }
@@ -243,7 +244,7 @@ main{
             padding: 10px 20px;
             margin-bottom: 20px;
             &:hover{
-                background-color: $accentColor;
+                background-color: black;
                 color: white;
             }
         }
@@ -348,7 +349,8 @@ $spinkit-spinner-color: #5f5e60 !default;
         font-size: 2.5rem;
         padding: 20px;
         span{
-            font-weight: 500;
+            font-weight: 700;
+            color: $accentColor;
         }
     }
 
@@ -414,7 +416,11 @@ footer{
         margin: 0 0 50px 0;
         padding: 20px 50px;
         font-size: 2rem;
-        background-color: $accentColor;
+        background-color: black;
         border: none;
+        box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
+        &:hover{
+            background-color: $accentColor;
+        }
     }
 }
