--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -19,6 +19,7 @@
                 <ul id="slideAnimation">
                     <li class="active">
                         <h2>Booster Ad</h2>
+                        <small>- Make Ads great again -</small>
                     </li>
                     <li>
                         <h2>Makes you love Ad's</h2>
