--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -126,7 +126,7 @@
         </main>
         <div class="goodbye">
             <h4>Thank you for the great weekend!</h4>
-            <p>Make Ads great again!</p>
+            <p>- Make Ads great again -</p>
             <small>#<span>FutureAdHackathon</span></small>
         </div>
         <footer>
