--- a/booster_ad/offers/static/offers/css/style.css
+++ b/booster_ad/offers/static/offers/css/style.css
@@ -278,6 +278,7 @@ main {
   text-align: center;
   margin-bottom: 300px; }
   #app h2 {
+    margin-bottom: 50px;
     font-size: 3rem;
     color: #2196f3; }
   #app .card-preview {
@@ -399,7 +400,7 @@ main {
   #powered h2 {
     font-weight: 100;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
     padding: 20px; }
     #powered h2 span {
       font-weight: 700;
@@ -420,9 +421,9 @@ main {
       #powered ul li:last-child {
         margin-right: 20px; }
       #powered ul li h4 {
-        font-size: 1.5rem; }
+        font-size: 2.5rem; }
       #powered ul li small {
-        font-size: 1.25rem;
+        font-size: 1.5rem;
         color: rgba(0, 0, 0, 0.5); }
 
 .goodbye {
@@ -432,7 +433,7 @@ main {
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.9);
   display: none;
   color: white;
   font-weight: 100; }
