--- a/booster_ad/offers/static/offers/scss/style.scss
+++ b/booster_ad/offers/static/offers/scss/style.scss
@@ -194,6 +194,7 @@ main{
     text-align: center;
     margin-bottom: 300px;
     h2{
+        margin-bottom: 50px;
         font-size: 3rem;
         color: $accentColor;
     }
@@ -352,7 +353,7 @@ $spinkit-spinner-color: #5f5e60 !default;
     h2{
         font-weight: 100;
         text-align: center;
-        font-size: 2.5rem;
+        font-size: 3rem;
         padding: 20px;
         span{
             font-weight: 700;
@@ -378,10 +379,10 @@ $spinkit-spinner-color: #5f5e60 !default;
                 margin-right: 20px;
             }
             h4{
-                font-size: 1.5rem;
+                font-size: 2.5rem;
             }
             small{
-                font-size: 1.25rem;
+                font-size: 1.5rem;
                 color: rgba(0,0,0,0.5);
             }
         }
@@ -392,7 +393,7 @@ $spinkit-spinner-color: #5f5e60 !default;
     position: fixed;
     margin: auto;
     top: 0; left: 0; bottom: 0; right: 0;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.9);
     display: none;
     color: white;
     font-weight: 100;
