--- a/booster_ad/offers/static/offers/css/style.css
+++ b/booster_ad/offers/static/offers/css/style.css
@@ -463,4 +463,41 @@ footer {
     footer input:hover {
       background-color: #2196f3; }
 
+@media screen and (max-width: 786px) {
+  main #about ul li h2 {
+    font-size: 5rem;
+    font-weight: 100;
+    color: #2196f3; }
+  main #about ul li small {
+    font-size: 1.5rem; }
+
+  #customers {
+    height: auto;
+    margin-bottom: 100px; }
+    #customers ul {
+      padding: 0 20px; }
+
+  #customers .card-container ul li {
+    margin: 0;
+    width: 100%;
+    height: 200px;
+    font-size: 1.5rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: -2px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    margin-bottom: 20px; }
+
+  .black-cards .card {
+    display: inline-block;
+    width: 100px;
+    height: 150px; }
+
+  #app .card-preview input {
+    width: 150px; }
+
+  #powered ul li {
+    margin: 0;
+    float: none; }
+    #powered ul li:last-child {
+      margin: 0; } }
+
 /*# sourceMappingURL=style.css.map */
