hardcoded Logo as Mediamarkt

--- a/booster_ad/offers/templates/offers/index.html
+++ b/booster_ad/offers/templates/offers/index.html
@@ -86,7 +86,7 @@
                                 Mode
                             </p> -->
                             <!-- Das Logo von der Brand-->
-                            <img src="" alt="Logo" />
+                            <img src="" alt="Mediamarkt" />
                         </div>
 
                     </div>
